# StudyBuddy-Study-Planner-Project

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  RUNBOOK.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py
apps/: __init__.py
apps/dashboard/: __init__.py  apps.py  services.py  urls.py  views.py
apps/dashboard/tests/: test_dashboard_metrics.py  test_dashboard_views.py  test_services.py
apps/insights/: __init__.py  admin.py  apps.py  factories.py  models.py  selectors.py  services.py  urls.py  views.py
apps/insights/migrations/: 0001_initial.py  __init__.py  (+1 more)
apps/roles/: __init__.py  admin.py  apps.py  factories.py  models.py  permissions.py
apps/sessions/: __init__.py  admin.py  apps.py  factories.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/users/: __init__.py  admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py  test.py
docs/: ai-nlp-contract.md  architecture.md  authentication.md  codex-studybuddy-sprint-2-outline.md  design-system.md  domain-model.md  local-setup.md  studybuddy-sprint-2-canonical-implementation-outline.md
static/css/: theme.css
templates/: base.html  home.html
templates/dashboard/: index.html
templates/insights/: insight_list.html
templates/registration/: login.html  signup.html
templates/sessions/: session_detail.html  session_form.html  session_list.html
templates/users/: login.html  profile.html  signup.html
tests/: __init__.py  test_models.py  test_settings.py  test_views.py
(+60 files in other folders)
