[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studybuddy-django-app"
version = "0.1.0"
description = "A production-minded Django SaaS MVP for study productivity."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "StudyBuddy Contributors" },
]
dependencies = [
    "Django>=5.0,<6.0",
    "django-environ>=0.11,<1.0",
    "gunicorn>=22.0,<23.0",
    "psycopg[binary]>=3.1,<4.0",
    "whitenoise>=6.6,<7.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0,<25.0",
    "factory-boy>=3.3,<4.0",
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "ruff>=0.5,<1.0",
]

[tool.setuptools]
packages = ["apps", "config"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["apps", "config", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]
